tests/snapshots/codegen_snapshot_tests__trait_supertrait_assignability.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3795
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Root {
    fn root_id(&self) -> i64;
}
pub trait Mid: Root {
    fn mid_id(&self) -> i64;
}
fn upcast_mid_to_root<__IncanTrait0: Mid>(v: __IncanTrait0) -> impl Root {
    return v;
}
pub trait DataSet<T> {
    fn tag(&self) -> T;
}
pub trait BoundedDataSet<T>: DataSet<T> {
    fn bound(&self) -> T;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Thing {
    x: i64,
}
impl incan_stdlib::reflection::HasClassName for Thing {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Thing {
    fn __class_name__() -> &'static str {
        "Thing"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Thing {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Thing {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("x"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("x"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Thing {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "x" => Some(format!("{}", self.x)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("x".to_string(), format!("{}", self.x))]
    }
}
impl Mid for Thing {
    fn mid_id(&self) -> i64 {
        return self.x + 1;
    }
}
impl Root for Thing {
    fn root_id(&self) -> i64 {
        return self.x;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Row {
    id: i64,
}
impl incan_stdlib::reflection::HasClassName for Row {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Row {
    fn __class_name__() -> &'static str {
        "Row"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Row {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Row {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("id"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("id"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Row {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "id" => Some(format!("{}", self.id)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("id".to_string(), format!("{}", self.id))]
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Wrapper<T> {
    value: T,
}
impl<T> incan_stdlib::reflection::HasClassName for Wrapper<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T> incan_stdlib::reflection::HasTypeClassName for Wrapper<T> {
    fn __class_name__() -> &'static str {
        "Wrapper"
    }
}
impl<T> incan_stdlib::reflection::HasFieldMetadata for Wrapper<T> {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T> incan_stdlib::reflection::HasTypeFieldMetadata for Wrapper<T> {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("value"),
                type_name: incan_stdlib::frozen::FrozenStr::new("T"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T: Clone> BoundedDataSet<T> for Wrapper<T> {
    fn bound(&self) -> T {
        return self.value.clone();
    }
}
impl<T: Clone> DataSet<T> for Wrapper<T> {
    fn tag(&self) -> T {
        return self.value.clone();
    }
}
fn upcast_bounded_row<__IncanTrait0: BoundedDataSet<Row>>(
    v: __IncanTrait0,
) -> impl DataSet<Row> {
    return v;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let t = Thing { x: 1 };
    let r = upcast_mid_to_root(t);
    let _ = println!("{}", r.root_id());
    let w = Wrapper { value: Row { id: 1 } };
    let d = upcast_bounded_row(w);
    let _ = println!("{}", d.tag().id);
}
fn main() {
    main();
}
